@@ -12,6 +12,8 @@ RESIP_MINOR_VERSION=2
 RESIP_MICRO_VERSION=0
 
 RESIP_VERSION=$RESIP_MAJOR_VERSION.$RESIP_MINOR_VERSION.$RESIP_MICRO_VERSION
+LIBRESIP_SO_VERSION=`expr $RESIP_MINOR_VERSION + $RESIP_MAJOR_VERSION`:$RESIP_MICRO_VERSION:$RESIP_MINOR_VERSION
+
 VERSION=$RESIP_VERSION
 PACKAGE=resiprocate
 
@@ -19,6 +21,7 @@ AC_SUBST(RESIP_VERSION)
 AC_SUBST(RESIP_MAJOR_VERSION)
 AC_SUBST(RESIP_MINOR_VERSION)
 AC_SUBST(RESIP_MICRO_VERSION)
+AC_SUBST(LIBRESIP_SO_VERSION, $LIBRESIP_SO_VERSION)
 
 AC_MSG_RESULT([Configuring ${PACKAGE} ${VERSION}])
 
@@ -27,7 +30,7 @@ AC_CONFIG_SRCDIR([resiprocate/config.hxx.in])
 AC_CONFIG_HEADER([resiprocate/config.hxx])
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
 
-AC_REVISION($Id: configure.ac,v 1.6 2003/08/09 02:04:44 wensong Exp $)
+AC_REVISION($Id: configure.ac,v 1.7 2003/08/10 10:21:53 wensong Exp $)
 
 AM_MAINTAINER_MODE
 
